# cometa_middleware

./: CMakeLists.txt  README.md
cmake/: FindWaveAPI.cmake
utils/matlabVisualizer/: README.md  README.txt  parseArgs.m  realtime_plot.m  subaxis.m
yarp_version/: CMakeLists.txt  cometa_emg_yarp.xml  cometa_yarp.cpp
yarp_version/gen_msgs/: ceinms_msgs_EmgData_msg.cmake  ceinms_msgs_ResetTimer_srv.cmake
yarp_version/gen_msgs/include/: Header.h  TickTime.h  ceinms_msgs_EmgData.h
yarp_version/gen_msgs/include/ceinms_msgs/: EmgData.h  Header.h  ResetTimer.h  ResetTimerReply.h  ceinms_msgs_EmgData.h  ceinms_msgs_ResetTimer.h  ceinms_msgs_ResetTimerReply.h
yarp_version/rosmsgs/: CMakeLists.txt
yarp_version/rosmsgs/ceinms_msgs/: EmgData.msg
